criando secao de produtos

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -51,16 +51,34 @@
             </div>
         </div>
     </section>
-    <section class="section_products">
+    <section class="products">
         <div class="container">
             <div class="row">
-                <h2>Catálogo</h2>
-                <div class="col">
-                    <img src="../images/produto-logo.png" alt="">
+                <h2 class="products_title">Catálogo</h2>
+                <div class="col-xs-12 col-sm-6 products_card">
+                    <img class="img-fluid" src="../images/produto-logo.png" alt="Criação de logo">
+                    <h3 class="products_card--title">Logo</h3>
+                    <p class="products_card--text">Design profissional de logos para você começar</p>
+                    <a href="#" class="btn btn-info products_card--btn" role="button">Tenho Interesse</a>
                 </div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col-xs-12 col-sm-6 products_card">
+                    <img class="img-fluid" src="../images/produto-timbrado.png" alt="Criação de logo">
+                    <h3 class="products_card--title">Papel Timbrado</h3>
+                    <p class="products_card--text">Aplicação de identidade visual a seus documentos do dia a dia.</p>
+                    <a href="#" class="btn btn-info products_card--btn" role="button">Tenho Interesse</a>
+                </div>
+                <div class="col-xs-12 col-sm-6 products_card">
+                    <img class="img-fluid" src="../images/produto-cartao.png" alt="Criação de logo">
+                    <h3 class="products_card--title">Cartão de visita</h3>
+                    <p class="products_card--text">Layout do seu cartão de visita com aquele toque profissional.</p>
+                    <a href="#" class="btn btn-info products_card--btn" role="button">Tenho Interesse</a>
+                </div>
+                <div class="col-xs-12 col-sm-6 products_card">
+                    <img class="img-fluid" src="../images/produto-site.png" alt="Criação de logo">
+                    <h3 class="products_card--title">Site institucional</h3>
+                    <p class="products_card--text">Desenvolvimento de site com a sua identidade visual aplicada.</p>
+                    <a href="#" class="btn btn-info products_card--btn" role="button">Tenho Interesse</a>
+                </div>
             </div>
         </div>
     </section>
