--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lance Me - Home</title>
-    <link rel="stylesheet" href=".././vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -120,6 +120,6 @@
     <footer class="footer">
         <p class="footer_text">&copy;Riicky-hub</p>
     </footer>
-    <script src=".././vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
